# uggo

./: .gitignore  .release-please-manifest.json  Cargo.toml  Dockerfile  LICENSE.md  Makefile  README.md  fly.toml  release-please-config.json  renovate.json
.github/: dependabot.yml
.github/workflows/: automerge.yml  build-caches.yml  nightly-builds.yml  release-builds.yml  rust-clippy.yml  test-verify.yml
assets/: usage.webm
crates/cdragon/: Cargo.toml
crates/config/: CHANGELOG.md  Cargo.toml
crates/config/src/: lib.rs
crates/lol-client/: CHANGELOG.md  Cargo.toml
crates/lol-client/src/: async_impl.rs  champ_select_session.rs  lcc.rs  lib.rs  lobby.rs
crates/ugg-api/: CHANGELOG.md  Cargo.toml
crates/ugg-api/src/: async_client.rs  lib.rs  shared.rs  sync_client.rs  util.rs
crates/ugg-proxy/src/: main.rs
crates/ugg-types/: CHANGELOG.md  Cargo.toml
crates/ugg-types/src/: arena_overview.rs  client_runepage.rs  client_summoner.rs  default_overview.rs  lib.rs  mappings.rs  matchups.rs  overview.rs
crates/uggo/: CHANGELOG.md  Cargo.toml
crates/uggo/src/: api.rs  client_api.rs  config.rs  context.rs  events.rs  main.rs  styling.rs  transpose.rs  ui.rs  util.rs
crates/uggo/src/components/: ability_order.rs  app_border.rs  augments.rs  build_select.rs  champ_list.rs  champ_name.rs  champ_synergy.rs  help_menu.rs  items.rs  matchups.rs  mod.rs  mode_select.rs  region_select.rs  role_select.rs  rune_path.rs  search.rs  shards.rs  spells.rs  version_select.rs
crates/uggo/src/ui/: ability_order.rs  app_border.rs  items.rs  matchups.rs  mod.rs  mode_select.rs  rune_path.rs  shards.rs  version_select.rs
src/: api.rs  client_api.rs  config.rs  main.rs  mappings.rs  styling.rs  util.rs
src/types/: champion.rs  client_runepage.rs  client_summoner.rs  item.rs  matchups.rs  overview.rs  rune.rs  summonerspell.rs
ugg-proxy/: Cargo.toml
ugg-proxy-cf/: Cargo.toml  wrangler.toml
ugg-proxy-cf/src/: lib.rs
ugg-proxy/src/: config.rs  main.rs
ugg-types/: Cargo.toml
ugg-types/src/: champion.rs  lib.rs  mappings.rs  matchups.rs  nested_data.rs  overview.rs  rune.rs  summonerspell.rs
uggo/: Cargo.toml
uggo/src/: api.rs  client_api.rs  config.rs  main.rs  styling.rs  util.rs
