[package]
name = "uggo"
version = "0.8.2"
edition = "2021"
rust-version = "1.59"
license = "MIT"
description = "CLI tool to query builds from u.gg, for League of Legends."
homepage = "https://github.com/kade-robertson/uggo"
repository = "https://github.com/kade-robertson/uggo"
readme = "README.md"
keywords = ["ugg", "league", "of", "legends"]
categories = ["command-line-utilities", "games"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
colored = "2"
hex = "0.4"
league-client-connector = "0.1"
levenshtein = "1"
lru = "0.9"
native-tls = "0.2"
pico-args = "0.5"
prettytable-rs = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
text_io = "0.1"
time = { version = "0.3", features = ["local-offset", "formatting", "macros"] }
ureq = { version = "2.6", features = ["json", "native-tls"] }

[profile.release]
opt-level = 3
strip = true

[features]
clippy = []

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{version}-{ target }{ archive-suffix }"
pkg-fmt = "bin"
