[workspace]
resolver = "2"
members = [
    "crates/uggo",
    "crates/ugg-types",
    "crates/ugg-api",
    "crates/config",
    "crates/lol-client"
]

[workspace.dependencies]
ddragon = "0.8.2"
native-tls = "0.2.11"
serde = "1.0.197"
thiserror = "1.0.58"
ureq = { version = "2.9.6", features = ["native-tls", "brotli"] }

[profile.release]
opt-level = 3
strip = true
codegen-units = 1
lto = true

[profile.release-small]
inherits = "release"
opt-level = "z"