[workspace]
resolver = "2"
members = [
    "crates/uggo",
    "crates/ugg-types",
    "crates/ugg-api",
    "crates/config",
    "crates/lol-client"
]

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
module_name_repetitions = "allow" 

[profile.release]
opt-level = 3
strip = true
codegen-units = 1
lto = true

[profile.release-small]
inherits = "release"
opt-level = "z"