[package]
name = "ugg-proxy"
version = "0.1.1"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
http-cache-reqwest = { version = "0.5", default-features = false, features = ["manager-moka"] }
reqwest = { version = "0.11", features = ["json"] }
reqwest-middleware = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.24", features = ["full"] }
tower-http = { version = "0.3", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
ugg-types = { path = "../ugg-types" }
