[package]
name = "uggo-ugg-api"
version = "0.4.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "uggo dependency -- API client for u.gg"
homepage = "https://github.com/kade-robertson/uggo"
repository = "https://github.com/kade-robertson/uggo"
readme = "../../README.md"
keywords = ["uggo"]
categories = ["api-bindings"]

[lints]
workspace = true

[dependencies]
ddragon = "0.9.1"
hex = "0.4.3"
levenshtein = "1.0.5"
lru = "0.13.0"
native-tls = "0.2.14"
serde = "1.0.218"
simd-json = { version = "0.15.0", default-features = false, features = ["serde_impl", "swar-number-parsing"] }
sha2 = "0.10.8"
thiserror = "2.0.11"
ureq = { version = "3.0.6", features = ["native-tls", "brotli"] }
ugg-types = { version = "0.7.0", path = "../ugg-types" }

[features]
json-runtime-detection = ["simd-json/runtime-detection"]
default = ["json-runtime-detection"]
