[package]
name = "uggo-config"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "uggo dependency -- shared config definition"
homepage = "https://github.com/kade-robertson/uggo"
repository = "https://github.com/kade-robertson/uggo"
readme = "../../README.md"
keywords = ["uggo"]
categories = ["config"]

[lints]
workspace = true

[dependencies]
config-better = "1.3.1"
thiserror = "2.0.11"
