[package]
name = "uggo-lol-client"
version = "0.4.2"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "uggo dependency -- API bindings for the League of Legends client"
homepage = "https://github.com/kade-robertson/uggo"
repository = "https://github.com/kade-robertson/uggo"
readme = "../../README.md"
keywords = ["uggo"]
categories = ["api-bindings"]

[lints]
workspace = true

[dependencies]
base64 = "0.22.1"
native-tls = "0.2.14"
regex = "1.11.1"
serde = { version = "1.0.218", features = ["derive"] }
snafu = "0.8.7"
thiserror = "2.0.11"
ureq = { version = "2.12.1", features = ["native-tls", "brotli", "json"] }
ugg-types = { version = "0.8.1", path = "../ugg-types" }
