[package]
name = "ugg-types"
version = "0.5.3"
edition = "2021"
license = "MIT"
rust-version = "1.80"
description = "Types for the uggo CLI tool and ugg-proxy server."
homepage = "https://github.com/kade-robertson/uggo"
repository = "https://github.com/kade-robertson/uggo"
keywords = ["ugg", "league", "of", "legends"]

[lints]
workspace = true

[dependencies]
serde = { version = "1.0.200", features = ["derive"] }