[package]
name = "ugg-types"
version = "0.9.0"
edition = "2024"
license = "MIT"
rust-version = "1.89"
description = "Types for the uggo CLI tool and ugg-proxy server."
homepage = "https://github.com/kade-robertson/uggo"
repository = "https://github.com/kade-robertson/uggo"
keywords = ["ugg", "league", "of", "legends"]

[lints]
workspace = true

[dependencies]
serde = { version = "1.0.218", features = ["derive"] }
