[package]
name = "uggo"
version = "0.12.1"
edition = "2021"
rust-version = "1.74"
license = "MIT"
description = "CLI tool to query builds from u.gg, for League of Legends."
homepage = "https://github.com/kade-robertson/uggo"
repository = "https://github.com/kade-robertson/uggo"
readme = "../../README.md"
keywords = ["ugg", "league", "of", "legends"]
categories = ["command-line-utilities", "games"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
ddragon = "0.8.1"
mimalloc = "0.1.39"
serde = "1.0.195"
ureq = { version = "2.9.5", features = ["native-tls", "brotli"] }
ugg-types = { version = "0.5.1", path = "../ugg-types" }
uggo-config = { version = "0.1.1", path = "../config" }
uggo-lol-client = { version = "0.2.1", path = "../lol-client" }
uggo-ugg-api = { version = "0.2.1", path = "../ugg-api", default-features = false }
crossterm = "0.27.0"
ratatui = "0.25.0"
tui-input = "0.8.0"

[features]
json-runtime-detection = ["uggo-ugg-api/json-runtime-detection"]
default = ["json-runtime-detection"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/uggo-v{ version }/{ name }-{version}-{ target }{ archive-suffix }"
pkg-fmt = "bin"
