[package]
name = "uggo"
version = "0.13.0"
edition = "2021"
rust-version = "1.80"
license = "MIT"
description = "CLI tool to query builds from u.gg, for League of Legends."
homepage = "https://github.com/kade-robertson/uggo"
repository = "https://github.com/kade-robertson/uggo"
readme = "../../README.md"
keywords = ["ugg", "league", "of", "legends"]
categories = ["command-line-utilities", "games"]

[lints]
workspace = true

[dependencies]
anyhow = "1.0.82"
ddragon = "0.8.2"
mimalloc = "0.1.41"
serde = "1.0.200"
ureq = { version = "2.9.7", features = ["native-tls", "brotli"] }
ugg-types = { version = "0.6.0", path = "../ugg-types" }
uggo-config = { version = "0.2.0", path = "../config" }
uggo-lol-client = { version = "0.3.0", path = "../lol-client" }
uggo-ugg-api = { version = "0.3.0", path = "../ugg-api", default-features = false }
ratatui = "0.29.0"
tui-input = "0.11.0"

[features]
json-runtime-detection = ["uggo-ugg-api/json-runtime-detection"]
default = ["json-runtime-detection"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/uggo-v{ version }/{ name }-{version}-{ target }{ archive-suffix }"
pkg-fmt = "bin"
