[package]
name = "uggo"
version = "0.15.1"
edition = "2024"
rust-version = "1.89"
license = "MIT"
description = "CLI tool to query builds from u.gg, for League of Legends."
homepage = "https://github.com/kade-robertson/uggo"
repository = "https://github.com/kade-robertson/uggo"
readme = "../../README.md"
keywords = ["ugg", "league", "of", "legends"]
categories = ["command-line-utilities", "games"]

[lints]
workspace = true

[dependencies]
anyhow = "1.0.96"
ddragon = "0.9.2"
log = "0.4.26"
mimalloc = "0.1.43"
ratatui = "0.29.0"
serde = "1.0.218"
tui-input = "0.14.0"
tui-logger = "0.17.0"
ugg-types = { version = "0.8.1", path = "../ugg-types" }
uggo-config = { version = "0.3.0", path = "../config" }
uggo-lol-client = { version = "0.4.2", path = "../lol-client" }
uggo-ugg-api = { version = "0.5.1", path = "../ugg-api", default-features = false }

[features]
json-runtime-detection = ["uggo-ugg-api/json-runtime-detection"]
default = ["json-runtime-detection"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/uggo-v{ version }/{ name }-{version}-{ target }{ archive-suffix }"
pkg-fmt = "bin"
